style: position error message absolutely to prevent layout shift

--- a/styles/sui/_error.scss
+++ b/styles/sui/_error.scss
@@ -1,4 +1,5 @@
 .sui-textfield__error {
+    position: absolute;
     display: block;
     color: var(--sui-error-text);
     font-size: 0.8em;
